增加 css与html部分内容

--- a/前端/HTML/基本标签.html
+++ b/前端/HTML/基本标签.html
@@ -92,10 +92,10 @@ hello world
 标签主要分为内联标签和块级标签.
 
 块级标签:
-    div p ul ol li form
+    div p ul ol li form h1~6 dl
 
 内联标签:
-    spam img b em del sub sup a input
+    spam img b em del sub sup a input select textarea
 -->
 
 </body>
