--- a/前端/CSS/CSS样式/demo.html
+++ b/前端/CSS/CSS样式/demo.html
@@ -11,27 +11,19 @@
             height: 300px;
             width: 300px;
             background: greenyellow;
-
+            float: left;
         }
         #cent{
             height: 100px;
             width: 100px;
             background: purple;
-        }
-        #cent2{
-            height: 100px;
-            width: 100px;
-            background: purple;
-            margin-left: 100px;
+            margin: 100px;
         }
     </style>
 </head>
 <body>
 <div id="top">
     <div id="cent">
-
-    </div>
-    <div id="cent2">
 
     </div>
 </div>
