--- a/前端/CSS/CSS样式/文本.html
+++ b/前端/CSS/CSS样式/文本.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <title>text</title>
     <style>
+        *{
+            margin: 0;
+        }
         #p1{
+            height: 200px;
             text-align: center;
             background: greenyellow;
-            line-height: 100px;
+            line-height: 200px;
             letter-spacing: 5px;
             word-spacing: 5px;
             text-transform: capitalize;
