通过模拟抽屉首页, 来熟悉css的一些用法

--- a/前端/HTML/基本标签.html
+++ b/前端/HTML/基本标签.html
@@ -95,7 +95,7 @@ hello world
     div p ul ol li form h1~6 dl
 
 内联标签:
-    spam img b em del sub sup a input select textarea
+    spam imgs b em del sub sup a input select textarea
 -->
 
 </body>
