--- a/前端/JS/jQUery/淡入淡出.html
+++ b/前端/JS/jQUery/淡入淡出.html
@@ -5,17 +5,19 @@
     <title>淡入淡出</title>
 </head>
 <body>
-<div class="div1" style="display: none; width: 500px; height: 500px; background: darkblue;"></div>
 <input class="fadeIn" type="button" value="fadeIn">
 <input class="fadeOut" type="button" value="fadeOut">
 <input class="fadeToggle" type="button" value="fadeToggle">
 <input class="fadeTo" type="button" value="fadeTo">
 <span>opacity:</span>
 <input id="opacity_num" type="number" value="0.5" max="1" min="0" step="0.1">
+<div class="div1" style="display: none; width: 500px; height: 500px; background: darkblue;"></div>
 <script src="jquery-3.3.1.js"></script>
 <script>
     $('.fadeIn').click(function () {
-        $('.div1').fadeIn(1000);
+        $('.div1').fadeIn(1000, 'swing', function () {
+            alert('done!')
+        });
     });
     $('.fadeOut').click(function () {
         $('.div1').fadeOut(1000);
